# dns-in-a-weekend

./: .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  pyproject.toml.bk
src/scripts/: decode_record.py  send_one_query.py
src/weekend_dns/: __init__.py  io.py  models.py  network.py
tests/: test_initial.py
