[project]
name = "weekend_dns"
authors = [
    {name = "Joe Kerhin", email = "37146185+jkerhin@users.noreply.github.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">= 3.8"


[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff.per-file-ignores]
"src/weekend_dns/__init__.py" = ["F401"]
